FEAT: add individual prodecut search option
