# server/main.go
@@ -118,6 +118,7 @@ func main() {
 	mux.HandleFunc("POST /listing/bid", mcf.AuthMiddleware(tx.CreateBid))
 	mux.HandleFunc("POST /listings", mcf.AuthMiddleware(tx.CreateNewListing))
 	mux.HandleFunc("GET /listings", mcf.AuthMiddleware(tx.GetListings))
+	mux.HandleFunc("GET /listings/{id}", mcf.AuthMiddleware(tx.GetListingsById))
 	mux.HandleFunc("PATCH /listings", mcf.AuthMiddleware(tx.UpdateListing))
 	mux.HandleFunc("DELETE /listings", mcf.AuthMiddleware(tx.DeleteListing))
 	mux.HandleFunc("GET /listings/highest-bid", mcf.AuthMiddleware(tx.GetHighestBid))
